alignment issues on home page

--- a/css/home.css
+++ b/css/home.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     width: 450px;
 	margin-right: 0%;
+	order: 1;
 }
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
@@ -142,7 +143,7 @@
 	background-image: url("../images/HTD_Website_Home-1_DK.jpg");
 	background-size: contain;
 	background-repeat: no-repeat;
-	background-position: bottom
+	background-position: right;
 	margin-bottom: 0px;
 	
 }
@@ -169,7 +170,8 @@
 .hope-column {
 	display: flex;
 	flex-direction: column;
-	margin-left: 10%;
+	order:0;
+	align-items: center;
 }
 
 .hope-to-dream-paragraph {
@@ -201,4 +203,11 @@
 .footer-why-sleep-matters-small {
 	font-size: .8em;
 	text-align: center;
+}
+
+
+
+.hide-me-until-small {
+	display: none;
+	margin-bottom: 10px;
 }
