--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,7 @@
 
 .showborder 
 {	
-	border-style: dashed !important;
-	border-width: .5px !important; 
+/*	border-style: dashed !important;	border-width: .5px !important; */
 }
 
 .hide-on-small-size {
